res/studyforrest/slurm-97474.err
Traceback (most recent call last):
  File "/camcan/FPNflexiblehubs/FPNflexiblehubs/flexiblehubsrunPoolSubjsSF.py", line 2, in <module>
    import PoolSubjs
  File "/camcan/FPNflexiblehubs/FPNflexiblehubs/PoolSubjs.py", line 258
    plt.figure()
    ^
SyntaxError: invalid syntax
